--- a/CoMotion/Resources/Base.lproj/Main.storyboard
+++ b/CoMotion/Resources/Base.lproj/Main.storyboard
@@ -49,5 +49,20 @@
             </objects>
             <point key="canvasLocation" x="-279.19999999999999" y="132.68365817091455"/>
         </scene>
+        <!--Chart View Controller-->
+        <scene sceneID="cEh-PR-RyX">
+            <objects>
+                <viewController storyboardIdentifier="ChartViewController" id="LZ0-01-zDU" customClass="ChartViewController" customModule="CoMotion" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FxZ-aW-efm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="b85-s6-sBR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DV8-KR-dFr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="414" y="133"/>
+        </scene>
     </scenes>
 </document>
